--- a/funktheo.tex
+++ b/funktheo.tex
@@ -37,6 +37,7 @@
 	
 % ================================
 % include your document parts here
+\include{content/kapitel1}
 % only use section-wise documents since include inserts new pages!
 % ================================
 \ifthenelse{\equal{\useThumbs}{1}}
