--- a/content/kapitel1.tex
+++ b/content/kapitel1.tex
@@ -1,1 +1,40 @@
-\chapter{Kapitel 1}
+\chapter{Der K\"orper $ \C $ der komplexen Zahlen}
+\section*{$ \R $ - der K\"orper der reellen Zahlen}
+Im $ 2- $dimensionalen $ \R- $Vektorraum $ \R^2 $ der geordneten reellen Zahlenpaare $ z\coloneqq(x,y) $ wird eine Multiplikation eingef\"uhrt verm\"oge
+\[ (x_1,y_1)(x_2,y_2)\coloneqq(x_1,x_2-y_1y_2, x_1y_2+x_2y_1) \]
+Dadurch wird $ \R^2 $, zusammen mit der Vektorraumaddition
+\[ (x_1,y_1)+(x_2,y_2)\coloneqq (x_1+x_2,y_1+y_2) \]
+zu einem (kommutativen) K\"orper mit dem Element $ (1,0) $ als Einselement; das Inverse von $ z=(x,y)\neq 0 $ ist
+\[ z^{-1}\coloneqq\left(\frac{x}{x^2+y^2},\frac{-y}{x^2+y^2}\right) \]
+Dieser K\"orper hei\ss t \deftxt{der K\"orper $ \C $ der komplexen Zahlen}.\\
+Man definiert weiter $ i\coloneqq (0,1)\in\C $. Offensichtlich gilt $ i^2=-1 $, man nennt $ i $ die \deftxt{imagin\"are Einheit} von $ \C $. F\"ur jede Zahl $ z=(x,y)\in\C $ besteht die eindeutige Darstellung $ (x,y)=(x,0)+(0,1)(y,0) $, d.h. $ z=x+iy $ mit $ x,y\in\R $, (wir identifizieren die reellen Zahlen $ x $ mit der komplexen Zahl $ (x,0) $). Man setzt
+\[ \Re z\coloneqq x,\quad \Im z\coloneqq y \]
+wobei $ z=x+iy $ und nennt $ x $ bzw. $ y $ \deftxt{Realteil} bzw. \deftxt{Imagin\"arteil von $ z $}. Die Zahl $ z $ hei\ss t \deftxt{reell} bzw. \deftxt{rein imagin\"ar}, wenn $ \Im z=0 $ bzw. $ \Re z = 0 $, letzteres bedeutet $ z=y $.
+\section*{Skalarpodukt und absoluter Betrag}
+F\"ur $ z=x+iy $, $ w=u+iv \in\C$ ist \[ \langle z,w\rangle\coloneqq\Re(w,\bar z)=xu+yv \]
+(f\"ur $ z=x+iy $ ist $ \bar z\coloneqq x-iy $) das euklidische Skalarprodukt im reellen Vektorraum $ \C=\R^2 $.\\
+Die nicht-negative reelle Zahl \[ |z|\coloneqq\sqrt{\langle z,\bar z\rangle}=\sqrt{z\bar z}=\sqrt{x^2+y^2} \]
+ist die euklidische L\"ange von $ z $, sie hei\ss t der \deftxt{absoluet Betrag} von $ z $. Es gilt:
+\begin{enumerate}
+\item $ |\bar z|=|z| $
+\item $ |\Re z|\leq|z| $, $ |\Im z|\leq |z| $
+\item $ z^{-1}=\frac{\bar z}{|z|^2} $ f\"ur $ z\neq 0 $
+\item $ \langle aw, az\rangle=|a|^2\langle w,z\rangle $, $ \langle\bar w,\bar z\rangle=\langle w,z\rangle\forall w,z,a\in\C $
+\item
+$|\langle w,z\rangle|\leq|w||z|\forall w,z\in\C$ (Cauchy-Schwarz-Ungleichung)
+
+\item
+$|w+z|^2=|w|^2+|z|^2+2\langle w,z\rangle\forall w,z\in\C $ (Cosinussatz)
+\end{enumerate}
+Zwei Vektoren $ z,w $ hei\ss en \deftxt{orthogonal}, wenn $ \langle z,w\rangle=0 $.\\
+Fundamental f\"ur das Rechnen mit dem Absolutbetrag sind folgende Regeln:
+\begin{enumerate}
+\item $ |z|\geq 0 $, $ |z|=0\Leftrightarrow z=0 $
+\item $ |zw|=|z||w| $ (Produktregel)
+\item $ |z+w|\leq|z|+|w| $ (Dreiecksungleichung)
+\end{enumerate}
+Auf Grund der Cauchy-Schwarzschen Ungleichung gilt:
+\[ -1\leq\frac{\langle w,z\rangle}{|w||z|}\leq 1\forall w,z\in\C^\ast\coloneqq\C\setminus\lbrace 0\rbrace \]
+Es folgt:
+\[ \exists!\varphi\in\R, 0\leq\varphi\leq\pi: \cos\varphi=\frac{\langle w,z\rangle}{|z||w|} \]
+Man nennt $ \varphi $ den Winkel zwischen $ w,z\in\C $, in Zeichen $ \measuredangle(w,z)=\varphi $. 
