--- a/funktheo.tex
+++ b/funktheo.tex
@@ -38,6 +38,7 @@
 % ================================
 % include your document parts here
 \include{content/kapitel1}
+\include{content/topo}
 % only use section-wise documents since include inserts new pages!
 % ================================
 \ifthenelse{\equal{\useThumbs}{1}}
