--- a/content/kapitel1.tex
+++ b/content/kapitel1.tex
@@ -14,7 +14,7 @@ wobei $ z=x+iy $ und nennt $ x $ bzw. $ y $ \deftxt{Realteil} bzw. \deftxt{Imagi
 F\"ur $ z=x+iy $, $ w=u+iv \in\C$ ist \[ \langle z,w\rangle\coloneqq\Re(w,\bar z)=xu+yv \]
 (f\"ur $ z=x+iy $ ist $ \bar z\coloneqq x-iy $) das euklidische Skalarprodukt im reellen Vektorraum $ \C=\R^2 $.\\
 Die nicht-negative reelle Zahl \[ |z|\coloneqq\sqrt{\langle z,\bar z\rangle}=\sqrt{z\bar z}=\sqrt{x^2+y^2} \]
-ist die euklidische L\"ange von $ z $, sie hei\ss t der \deftxt{absoluet Betrag} von $ z $. Es gilt:
+ist die euklidische L\"ange von $ z $, sie hei\ss t der \deftxt{Absolutbetrag} von $ z $. Es gilt:
 \begin{enumerate}
 \item $ |\bar z|=|z| $
 \item $ |\Re z|\leq|z| $, $ |\Im z|\leq |z| $
