--- a/content/reihen.tex
+++ b/content/reihen.tex
@@ -1,1 +1,6 @@
 \chapter{Konvergente und absolut konvergente Reihen}
+\begin{definition}
+Ist $ (a_\nu)_{\nu\geq k} $ eine Folge komplexer Zahlen, so hei\ss t die Folge $ (s_n)_{n\geq k} $, $ s_n\coloneqq\sum_{\nu=k}^{n}a_\nu $, der Partialsummen eine \deftxt{(unendliche) Reihe} mit den \deftxt{Gliedern} $ a_\nu $. Man schreibt $ \sum_{\nu=k}^{\infty}a_\nu $, $ \sum_{k}^{\infty}a_\nu $, $ \sum_{\nu\geq k} $ oder einfach $ \sum a_\nu $.\\
+ Eine Reihe $ \sum a_\nu $ hei\ss t \deftxt{konvergent}, wenn die Partilsummenfolge $ (s_n) $ konvergiert, andernfalls hei\ss t sie \deftxt{divergent}. Im Konvergenzfall schreibt man suggestiv:
+\[ \sum a_\nu\coloneqq\lim s_n \]
+\end{definition}
