--- a/funktheo.tex
+++ b/funktheo.tex
@@ -39,6 +39,8 @@
 % include your document parts here
 \include{content/kapitel1}
 \include{content/topo}
+\include{content/folgen}
+\include{content/reihen}
 % only use section-wise documents since include inserts new pages!
 % ================================
 \ifthenelse{\equal{\useThumbs}{1}}
