--- a/content/topo.tex
+++ b/content/topo.tex
@@ -17,6 +17,7 @@ Eine Teilmenge $ U\subset X $ eines metrischen Raumes $ X $ hei\ss t \deftxt{off
 \item $ U_1,U_2,...,U_m $ offen$ \Rightarrow\bigcap_{i=1}^m U_i $ offen
 \end{enumerate}
 \end{definition}
+\newpage
 \begin{definition}
 Eine Menge $ A\subset X $ hei\ss t \deftxt{abgeschlossen} (in $ X $)$ \Leftrightarrow X\setminus A$ offen.
 \begin{enumerate}
