--- a/funktheo.tex
+++ b/funktheo.tex
@@ -44,6 +44,7 @@
 \include{content/folgen}
 \include{content/reihen}
 \include{content/stetig}
+\include{content/raum}
 % only use section-wise documents since include inserts new pages!
 % ================================
 \ifthenelse{\equal{\useThumbs}{1}}
