--- a/content/raum.tex
+++ b/content/raum.tex
@@ -114,4 +114,8 @@ $ G $ ab jetzt immer ein Gebiet, und $ D $ immer ein Bereich.\\
 $ z_0,z_1\in\C $, $ d(z_0,z_1)=|z_0-z_1| $ Abstand zwischen $ z_0 $ und $ z_1 $.\\
 $ z_0\in\C $, $ A\subset\C $ abgeschlossen, $ d(z_0,A)=\inf\lbrace d(z_0,w)\mid w\in A\rbrace $\\
 $ D\subset\C $ Bereich, $ c\in D $, $ \partial D=\bar D\setminus D $. Randabstand $ d_c(D)=d(c,\partial D) $.\\
-Sonderfall: $ D=\C $, $ d_c(D)=+\infty $.
+Sonderfall: $ D=\C $, $ d_c(D)=+\infty $.\\
+$ d=d_c(D) $ ist der maximale Radius, so dass $ B_d(c)\subset D $ enthalten ist.
+\begin{beispiel*}
+	$ D=B_r(a) $. $ \partial D=\lbrace z\in\C\mid |z-a|=r\rbrace $.
+\end{beispiel*}
