--- a/funktheo.tex
+++ b/funktheo.tex
@@ -21,7 +21,7 @@
 
 \ifthenelse{\equal{\sectioning}{1}}{}{\automark[chapter]{chapter}}%different headlines for chapter-only and sectioning
 
-%\includeonly{content/int1}											% while writing your book, compile only what you need
+\includeonly{content/potenz}											% while writing your book, compile only what you need
 \binoppenalty=\maxdimen
 \relpenalty=\maxdimen
 \begin{document}
@@ -45,6 +45,10 @@
 \include{content/reihen}
 \include{content/stetig}
 \include{content/raum}
+\include{content/kompdiff}
+\include{content/holo}
+\include{content/kapitelzwei}
+\include{content/potenz}
 % only use section-wise documents since include inserts new pages!
 % ================================
 \ifthenelse{\equal{\useThumbs}{1}}
