--- a/content/kapitelzwei.tex
+++ b/content/kapitelzwei.tex
@@ -1,5 +1,5 @@
 \chapter{Konvergenzbegriffe der Funktionentheorie}
-\section*{Gleichm\"a\ss ige, lokal-gleichm\"a\ss ige und kompakte Konvergenz}
+\section{Gleichm\"a\ss ige, lokal-gleichm\"a\ss ige und kompakte Konvergenz}
 \begin{definition}
 	Eine Funktionenfolge $ f_n\colon X\rightarrow\C $ hei\ss t in $ A\subset\C $ \deftxt{gleichm\"a\ss ig konvergent gegen $ f\colon A\rightarrow\C $}, wenn $ \forall\e>0\exists n_0(\e)\in\N $ so dass $ \forall n\geq n_0 $ und $ \forall x\in X $ gilt:
 	\[ |f(x)-f_n(x)|<\e \]
