--- a/content/potenz.tex
+++ b/content/potenz.tex
@@ -130,7 +130,7 @@ Die \deftxt{Arcustangens-Reihe} definiert man als
 	\[ \sum_{\nu\geq 1}^{}|a_\nu q_\nu|_{B_r}\leq\sum_{\nu\geq 1}^{} \nu|a_\nu|r^{\nu-1}<\infty \]
 	nach Satz oben.
 \end{beweis}
-\subsection*{Beispiele holomorpher Funktionen}
+\subsection{Beispiele holomorpher Funktionen}
 \begin{enumerate}
 	\item Geometrische Reihe:
 	\[ \sum_{\nu=0}^\infty z^\nu=\frac{1}{1-z}\Rightarrow\frac{1}{(1-z)^{k+1}}=\sum_{\nu\geq k}^{}\binom{\nu}{k}z^{\nu-k},\quad z\in\E  \]
